--- a/app/components/collectionShow/collectionPaperList.scss
+++ b/app/components/collectionShow/collectionPaperList.scss
@@ -58,14 +58,6 @@
   color: $gray600;
 }
 
-.paperItemWrapper {
-  display: flex;
-
-  & + & {
-    margin-top: 16px;
-  }
-}
-
 .paperCheckBox {
   margin: 8px 16px 0 0;
 }
